# libcall

./: .gitmodules  CMakeLists.txt
cmake/: project.cmake
src/: call.hpp  lib.cpp  loader.hpp  room.hpp  session.hpp  types.hpp
src/errors/: error_t.hpp  lc_exception.hpp
